# TriggeredAvg

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
Source/: CMakeLists.txt  DataCollector.cpp  DataCollector.h  GridDisplay.cpp  GridDisplay.h  MultiChannelRingBuffer.cpp  MultiChannelRingBuffer.h  OpenEphysLib.cpp  PopupConfigurationWindow.cpp  SinglePlotPanel.cpp  SinglePlotPanel.h  TimeAxis.h  TriggerSource.cpp  TriggerSource.h  TriggeredAvgActions.cpp  TriggeredAvgActions.h  TriggeredAvgCanvas.cpp  TriggeredAvgCanvas.h  TriggeredAvgEditor.cpp  TriggeredAvgEditor.h  TriggeredAvgNode.cpp  TriggeredAvgNode.h  TriggeredLFPCanvas.cpp  TriggeredLFPCanvas.h  TriggeredLFPEditor.cpp  TriggeredLFPEditor.h  TriggeredLFPViewer.cpp  TriggeredLFPViewer.h
Source/Ui/: GridDisplay.h  PopupConfigurationWindow.cpp  PopupConfigurationWindow.h  SinglePlotPanel.cpp  TimeAxis.cpp  TriggeredAvgCanvas.cpp  TriggeredAvgCanvas.h  TriggeredAvgEditor.cpp  TriggeredAvgEditor.h
Test/: run_tests.bat  test_MultiChannelRingBuffer.cpp
TestWithMainProject/: CMakeLists.txt  README.md  build-and-test.ps1
Tests/: CMakeLists.txt  README.md  test_DataCollector.cpp  test_MultiChannelRingBuffer.cpp
